# vector

./: Cargo.toml  LICENSE-3rdparty.csv  license-tool.toml
lib/codecs/: Cargo.toml
lib/codecs/src/decoding/format/: avro.rs
lib/docs-renderer/: Cargo.toml
lib/docs-renderer/src/: main.rs  renderer.rs
lib/vector-config-common/src/: constants.rs
lib/vector-config-common/src/schema/: mod.rs
lib/vector-config-macros/src/: attrs.rs  component_name.rs  configurable_component.rs  lib.rs
lib/vector-config/src/component/: marker.rs  mod.rs
lib/vector-config/src/schema/parser/: component.rs  query.rs
scripts/: generate-component-docs.rb
src/config/: api.rs
src/enrichment_tables/: mod.rs
src/internal_events/: codecs.rs
src/sources/docker_logs/: mod.rs
src/sources/kubernetes_logs/: mod.rs  path_helpers.rs  reconciler.rs
src/sources/kubernetes_logs/parser/: api.rs  mod.rs  test_util.rs
vdev/: Cargo.toml
website/cue/reference/base/: api.cue  configuration.cue
