[package]
name = "docs-renderer"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.95", default-features = false, features = ["std"] }
enum_dispatch.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing = { version = "0.1.34", default-features = false }
toml.workspace = true
vector-config = { path = "../vector-config" }
vector-lib = { path = "../vector-lib" }
vector-config-common = { path = "../vector-config-common" }
